# PrivateRepoLoader

./: README.md  hacs.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.tools/: constraints.txt  requirements-ci.txt
custom_components/private_repo_loader/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  github_api.py  loader.py  manifest.json  sensor.py  services.yaml  strings.json  update.py
custom_components/private_repo_loader/translations/: en.json
tests/: __init__.py  conftest.py  test_button.py  test_config_flow.py  test_coordinator.py  test_github_api.py  test_init.py  test_loader.py  test_loader_errors.py  test_sensor.py  test_update.py
