[project]
name = "private-repo-loader"
version = "1.0.0"
description = "HACS integration to load private GitHub repositories using PAT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "GitPython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "homeassistant",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = false

[tool.pytest.ini_options]
asyncio_mode = "auto"